# searchpass

./: README.md  pyproject.toml  requirements.txt  searchpass  setup.cfg
.github/workflows/: pypi-publish.yml  python-package.yml
src/: searchpass
src/searchpass/: __info__.py  __init__.py  __main__.py
src/searchpass/db/: __init__.py  lexer.py  searchpass.db  sql.py  table.py
