[build-system]
requires = ["setuptools>=66.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "searchpass.__main__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "searchpass"
authors = [
  {name="Alexandre D'Hondt", email="alexandre.dhondt@gmail.com"},
]
description = "Default passwords search tool supporting many open source databases"
license = {file = "LICENSE"}
keywords = ["default-passwords", "search-tool"]
requires-python = ">=3.8,<4"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Other Audience",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
]
dependencies = [
  "dictquery",
  "pybots>=2.1.3",
  "setuptools>=67.3.2",
  "tinyscript>=1.28.6",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/dhondta/searchpass"
issues = "https://github.com/dhondta/searchpass/issues"
repository = "https://github.com/dhondta/searchpass"

[project.scripts]
searchpass = "searchpass.__main__:main"
