[build-system]
requires = ["setuptools>=70.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "searchpass.__info__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.db"]

[project]
name = "searchpass"
authors = [
  {name="Alexandre D'Hondt", email="alexandre.dhondt@gmail.com"},
]
description = "Default passwords search tool supporting many open source databases"
license = {file = "LICENSE"}
keywords = ["default-passwords", "default-credentials", "network-devices", "search-tool", "pentest-tool",
            "cybersecurity-tool"]
requires-python = ">=3.8,<4"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Other Audience",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
]
dependencies = [
  "pybots>=2.1.5",
  "zipp>=3.19.1",      # SNYK-PYTHON-ZIPP-7430899
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/dhondta/searchpass"
issues = "https://github.com/dhondta/searchpass/issues"
repository = "https://github.com/dhondta/searchpass"

[project.scripts]
searchpass = "searchpass.__main__:main"
