[metadata]
name = searchpass
version = 1.0.3
author = Alexandre D'Hondt
author_email = alexandre.dhondt@gmail.com
home_page = https://github.com/dhondta/searchpass
description = Default passwords search tool supporting many open source databases
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    default-passwords
    search-tool
license = GPLv3
license-file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Security

[options]
packages = find:
include_package_data = False
install_requires =
    dictquery
    pybots>=2.1.1
    tinyscript>=1.26.2
setup_requires = setuptools
python_requires = >=3.6.0,<4
scripts =
    searchpass
